--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav m-auto font-rubik">
                 <li class="nav-item active">
-                  <a class="nav-link" href="#">商品一覧 <span class="sr-only">(current)</span></a>
+                  <a class="nav-link" href="#">商品一覧</a>
                 </li>
                 <li>
                   <span></span>
@@ -74,17 +74,17 @@
               </form>
               <ul class="nav navbar-nav navbar-right">			
                 <li class="nav-item active">
-                  <a class="nav-link active font-size-16" href="#">マイページ</a>
+                  <a class="nav-link active" href="#"><span><i class="far fa-user-circle"></span></i></a>
                 </li>
                 <form action="#" class="font-size-14 font-rale m-auto">
                   <a href="#" class="py-2 rounded-pill color-primary-bg">
-                   <span class="font-size-16 px-2 text-blue"><i class="fas fa-shopping-cart"></i></span>
-                   <span class="px-3 py-2 rounded-pill text-light bg-info">0</span>
+                    <span class="font-size-16 px-2 text-blue"><i class="fas fa-shopping-cart"></i></span>
+                    <span class="px-3 py-2 rounded-pill text-light bg-info">0</span>
                   </a>
                 </form>
               </ul>
             </div>
-         </nav>
+          </nav>
 
          
         <!-- Primary Navigation -->
